ajustes labels nav

--- a/teste_position_displya.html
+++ b/teste_position_displya.html
@@ -22,9 +22,13 @@
             <img class="image-logo" src="static/images/5f197029bea6e16994e015c4_logo_bco.png" alt="Logo Traad">
         </div>
         <div class="nav">
-            <a class="link">Teste0</a>
-            <a class="link">Teste1</a>
-            <a class="link">Teste2</a>
+            <a class="link">Calendario</a>
+            <a class="link">FDS</a>
+            <a class="link">FDS Graficos</a>
+            <a class="link">TX RF</a>
+            <a class="link">FIIs</a>
+            <a class="link">RF Estrut</a>
+            <a class="link">RV</a>
             <div class="login">
                 <a link="">Login</a>
             </div>
